# Shiryoku

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
shiryoku-backend/: .prettierrc  package-lock.json  package.json  schema.sql  wrangler.jsonc  wrangler.toml
shiryoku-backend/src/: index.ts
src/: app.rs  client.rs  compiler.rs  config.rs  enums.rs  handler.rs  mailer.rs  main.rs  models.rs  storage.rs  tui.rs  ui.rs
src/app/: compose.rs  configuration.rs  dashboard.rs  mod.rs  schedule.rs  scheduled.rs
src/handler/: dashboard.rs  helper.rs  mod.rs  schedule.rs  scheduled.rs  standard.rs
src/ui/: compose.rs  config.rs  dashboard.rs  mod.rs  schedule.rs  scheduled.rs  statusbar.rs  tabs.rs
