[package]
name = "shiryoku"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
crossterm = "0.29.0"
directories = "6.0.0"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls", "builder"] }
mime_guess = "2.0.5"
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.25", features = ["json"] }
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
